<resources>
    <string name="app_name">用户模块</string>

    <!--登录-->
    <string name="login_page">登录</string>
    <string name="login_account">请输入账号</string>
    <string name="login_pwd">请输入登录密码</string>
    <string name="login_login">立即登录</string>
    <string name="login_forget_pwd">忘记密码</string>
    <string name="login_regist">立即注册</string>
    <string name="login_no_account">没有账号？</string>
    <string name="update_login_pwd">修改登录密码</string>
    <string name="forget_login_pes">忘记密码</string>
    <string name="set_login_pwd">请设置新登录密码</string>
    <string name="confirm_login_pwd">确认新登录密码</string>
    <string name="get_code">获取验证码</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="code_hint">验证码</string>
    <string name="sure">确定</string>
    <string name="send_code_success">验证码发送成功</string>
    <string name="login_ing">登录中</string>

    <!--注册-->
    <string name="regist_page">注册</string>
    <string name="regist_name">用户账号</string>
    <string name="regist_name_hint">用户账号(6-25个字符的字母、数字或汉字)</string>
    <string name="regist_phone">手机号码</string>
    <string name="regist_code">验证码</string>
    <string name="regist_invite">邀请码（选填）</string>
    <string name="regist_login_pwd">请设置登录密码 (6-10位数字字母组合)</string>
    <string name="regist_login_pwd1">请设置新登录密码 (6-10位数字字母组合)</string>
    <string name="regist_login_pwd2">请再次确认登录密码</string>
    <string name="regist_ex_pwd">请设置交易密码 (6位数字)</string>
    <string name="regist_agree">同意</string>
    <string name="regist_html">《新生态服务条款》</string>
    <string name="err_phone">手机号码格式不正确</string>

    <!--升级的文字-->
    <string name="have_new_version">有新版本</string>
    <string name="update">立即更新</string>
    <string name="update_t1">需要开启权限后才能使用</string>
    <string name="update_t2">去设置</string>
    <string name="update_t3">取消</string>
    <string name="update_t4">升级到新版本</string>
    <string name="update_t5">本地已经下载好最新的安装包，直接安装？</string>
    <string name="update_t6">当前版本:</string>
    <string name="update_t7">更新版本:</string>
    <string name="update_t8">更新内容:</string>

    <string name="install_t1">点击安装</string>
    <string name="install_t2">安装包不存在，请重新更新</string>
    <string name="install_t3">立即更新</string>
    <string name="install_t4">请允许安装未知来源的应用</string>
    <string name="install_t5">正在下载</string>
    <string name="install_t6">重新下载</string>
</resources>
