<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/size_20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/size_20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvUpdateTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_20dp"
                android:gravity="center"
                android:text="@string/have_new_version"
                android:textColor="@color/color_000000"
                android:textSize="@dimen/text_size_18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/update_t6"
                    android:textColor="@color/color_000000"
                    android:textSize="@dimen/text_size_16sp" />

                <TextView
                    android:id="@+id/tvCurrentVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/size_10dp"
                    android:gravity="center_vertical"
                    android:text=""
                    android:textColor="@color/color_000000"
                    android:textSize="@dimen/text_size_15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/update_t7"
                    android:textColor="@color/color_000000"
                    android:textSize="@dimen/text_size_16sp" />

                <TextView
                    android:id="@+id/tvUpdateVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/size_10dp"
                    android:gravity="center_vertical"
                    android:text=""
                    android:textColor="@color/color_000000"
                    android:textSize="@dimen/text_size_15sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10dp"
                android:text="@string/update_t8"
                android:textColor="@color/color_000000"
                android:textSize="@dimen/text_size_16sp" />

            <TextView
                android:id="@+id/tvUpdateDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_5dp"
                android:textColor="@color/color_000000"
                android:textSize="@dimen/text_size_15sp" />
        </LinearLayout>


        <ProgressBar
            android:id="@+id/tvUpdateProgress"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_4dp"
            android:layout_marginLeft="@dimen/size_20dp"
            android:layout_marginRight="@dimen/size_20dp"
            android:layout_marginTop="@dimen/size_15dp"
            android:progressDrawable="@drawable/progressbar"
            android:scrollbarStyle="insideInset"
            android:visibility="gone" />

        <View
            style="@style/line_style_gray"
            android:layout_marginTop="@dimen/size_5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/size_35dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/size_5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/no"
                android:textColor="@color/color_000000"
                android:textSize="@dimen/text_size_16sp" />

            <!--<View-->
            <!--style="@style/line_vertical_style"-->
            <!--android:background="@color/color_F3F3F3" />-->

            <TextView
                android:id="@+id/tvConfirm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/size_5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/update"
                android:textColor="@color/primary_click_selector"
                android:textSize="@dimen/text_size_16sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>